v1.0.3
------

* Added a Live Map. You'll need to re-upload your tracks to see the live map, since it requires new
  track assets.
* Added support for plugins such as KissMyRank. Follow the KissMyRank setup, but instead of editing
  server_cfg.ini, edit the Options in Server Manager (it overwrites server_cfg.ini!)
* Overhauled UDP proxying to work with sending messages as well as existing support for receiving.
  (This is what makes KissMyRank etc work!)
* Added support for 'Reverse Grid Positions' races within Championship events. If a second race occurs, the championship
  page will show results for that too. It will correctly add points to the entrants and optionally can apply a
  multiplier to all second races to scale their points. This multiplier can be a decimal, and can even be negative!
* Added the ability to schedule championship events and custom races.
* Added button on results page to open the results on the SimResults website.
* When creating a race the number of available pit boxes for a track/layout is now displayed, max clients is limited to
  this number (requires manual upload of track - including default content).
* Championship events now welcome each player with a message describing their current position in the championship
  and who their nearest rivals are.

v1.0.2
------

* Increase number of results per result listing page to 20.
* Add a 404 error for results pages that don't exist
* Results listing page now shows 10 pages in the pagination bar with options to skip to the front and end,
  and forwards/backwards by 10 pages
* Fixed an issue with named Custom Race entrants losing their car/skin on race start
* Collision speeds on Live Timings page are now rounded to 2 decimal places

v1.0.1
------

* Fixed an issue with populating default points when creating championship classes. Points for places beyond the F1
  defaults now show '0' when created, rather than '25' which was incorrectly shown before.